--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -158,6 +158,7 @@
             app:layout_constraintStart_toEndOf="@id/newCasesText"/>
 
         <TextView
+            android:id="@+id/lastUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Last Update: "
